# git-ai

./: .codespellrc  .gitignore  AGENTS.md  BENCHMARKS.md  BLOCKING_AND_BYPASS_IMPLEMENTATION.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Claude.md  DAEMON_PLAN.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NOTES_DURABILITY_IMPLEMENTATION.md  PERF.md  PR_DESCRIPTION.md  README.md  REBASE_ATTRIBUTION_RECOVERY.md  REBASE_REWRITE_DESIGN.md  Readme.md  SECURITY.md  SNAPSHOT_IMPLEMENTATION.md  TESTING_PHASE_5A.md  Taskfile.yml  benchmark_rebase.sh  benchmark_rebase_v3.sh  build.rs  corehooks_implementation_report_fixes_1_6.md  data-privacy.md  default.nix  flake.nix  install-local.ps1  install-local.sh  install.ps1  install.sh  optimization_plan_corehooks.md  package.json  performance_report_corehooks_vs_main.md  pnpm-lock.yaml  pnpm-workspace.yaml  (+5 more)
.cargo/: config.toml
.github/: dependabot.yml
.trellis/: .template-hashes.json  config.yaml
ai-plans/: debug_log.txt  demo-test-plan.md  research-metrics-extension.md
docs/: MANUAL.md  PERF.md  bash-attribution-scenarios.md  commit-message-stats.md  concurrent-checkpoint-admission.md  daemon-trace2-ingestion-spec.md  daemon_mode_test_compat_todos.md  http-notes-backend-migration-spec.md  installer-release-runbook.md  trace2-rewrite-fuzzer-spec.md  tracker-功能说明书.md  tracker-测试用例.md
hooks/: pre-commit
installer/: README.md
packaging/: README.md
scripts/: ai  attribution-demo.py  check-workflows-local-smoke.sh  ci-test-with-retry.ps1  db-schema.sql  dev.ps1  dev.sh  (+10 more)
(+931 files in other folders)
