[package]
name = "git-ai"
version = "2.0.0-alpha.1"
edition = "2024"
default-run = "git-ai"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
imara-diff = "0.2"
libc = "0.2"
glob = "0.3"

[features]
test-support = []

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
tempfile = "3.27"
sha2 = "0.10"
serde_json = "1.0"
rand = "0.10"
regex = "1"
serial_test = "3"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.test]
debug = 1
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 2

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = true

[package.metadata.deb]
maintainer = "git-ai-inc <support@git-ai.com>"
copyright = "2024-2026, git-ai-inc"
license-file = ["LICENSE", "0"]
depends = "git"
section = "devel"
priority = "optional"
assets = [
    ["target/release/git-ai", "usr/bin/", "755"],
]
extended-description = """git-ai transparently tracks AI vs human code authorship \
through git hooks, providing per-line attribution data stored in git notes."""
